tests/errors/missing_mapped_net.nm
component Foo {
    pin X: passive = 1;
    pin Y: passive = 2;
}

component Main {
    net A, B;

    Foo {
        X: A;
        Y: B;
    }

    Foo {
        X: A;
        Y: C;
    }
}